<resources>
    <string name="app_name">APPEVA2JoseGonzalez</string>
    <string name="title_activity_view">ViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingrese_rut">Ingrese Rut</string>
    <string name="ingrese_nombre">Ingrese nombre</string>
    <string name="agregar">Agregar</string>
    <string name="rut">RUT</string>
    <string name="nombre">Nombre</string>
    <string name="mail">Mail</string>
    <string name="telefono">Telefono</string>
    <string name="textview">TextView</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
</resources>
