<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RV_Row"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:clickable="false">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="343dp"
        android:layout_marginRight="343dp"
        android:layout_marginBottom="64dp"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="343dp"
        android:layout_marginRight="343dp"
        android:layout_marginBottom="30dp"
        android:text="@string/rut" />

    <TextView
        android:id="@+id/rv_row_nombre"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="63dp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/rv_row_rut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="242dp"
        android:layout_marginRight="242dp"
        android:layout_marginBottom="27dp"
        android:text="@string/textview" />

    <Button
        android:id="@+id/btn_edita"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="277dp"
        android:layout_marginLeft="277dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="52dp"
        android:text="@string/editar" />

    <Button
        android:id="@+id/btn_elimina"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="278dp"
        android:layout_marginLeft="278dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="-3dp"
        android:text="@string/eliminar" />

</RelativeLayout>